# pydemo

./: .gitignore  database.db  main.py  pyproject.toml  requirements.txt  start.ps1  start.sh
src/customer_api/: main.py
src/customer_api/database/: db.py  schema.py
src/customer_api/models/: customer.py
src/customer_api/routes/: customer.py
