[project]
name = "customer-api"
version = "0.1.0"
description = "API de Cadastro de Cliente"
authors = [
    {name = "mccaetano",email = "marcelo.cheruti@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
